--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "expo": "~40.0.0",
+    "expo-location": "~10.0.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-web": "~0.13.12"
