Map is working for both android and ios now.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,8 +4,11 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '10.0'
 
 target 'RoadTripBite' do
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
+  pod 'GoogleMaps'
+  pod 'Google-Maps-iOS-Utils'
   config = use_native_modules!
-
   use_react_native!(:path => config["reactNativePath"])
 
   target 'RoadTripBiteTests' do
@@ -21,6 +24,7 @@ target 'RoadTripBite' do
   post_install do |installer|
     flipper_post_install(installer)
   end
+  
 end
 
 target 'RoadTripBite-tvOS' do
