--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,10 @@ buildscript {
         buildToolsVersion = "29.0.2"
         minSdkVersion = 16
         compileSdkVersion = 29
+        supportLibVersion = "28.0.0"
+        playServicesVersion = "17.0.0" // or find latest version
         targetSdkVersion = 29
+        androidMapsUtilsVersion = "2.2.0"
     }
     repositories {
         google()
