--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,6 +11,8 @@ target 'RoadTripBite' do
   config = use_native_modules!
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-location', :path => '../node_modules/react-native-location'
+
   target 'RoadTripBiteTests' do
     inherit! :complete
     # Pods for testing
