--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^10.5.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-location": "2.5.0",
     "react-native-maps": "0.27.1"
   },
   "devDependencies": {
