--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.63.4",
     "react-native-location": "2.5.0",
     "react-native-maps": "0.27.1",
+    "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-vector-icons": "8.0.0"
   },
   "devDependencies": {
