--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-native-firebase/functions": "^10.8.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-location": "2.5.0",
     "react-native-maps": "0.27.1",
+    "react-native-reanimated": "^1.13.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-vector-icons": "8.0.0"
   },
