--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-scroll-bottom-sheet": "^0.7.0",
-    "react-native-vector-icons": "8.0.0"
+    "react-native-vector-icons": "8.0.0",
+    "use-memo-one": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
