--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-native-firebase/app": "^10.8.0",
     "@react-native-firebase/firestore": "^10.8.0",
     "@react-native-firebase/functions": "^10.8.0",
+    "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-location": "2.5.0",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "^2.0.0",
