--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/admob": "^11.3.0",
     "@react-native-firebase/analytics": "^10.8.0",
     "@react-native-firebase/app": "^10.8.0",
     "@react-native-firebase/firestore": "^10.8.0",
     "@react-native-firebase/functions": "^10.8.0",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -22,7 +25,9 @@
     "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-location": "2.5.0",
     "react-native-maps": "0.27.1",
-    "react-native-reanimated": "^2.0.0",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.2.0",
     "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-vector-icons": "8.0.0",
     "use-memo-one": "^1.1.2"
