--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/admob": "^11.3.0",
-    "@react-native-firebase/analytics": "^11.3.0",
-    "@react-native-firebase/app": "^11.3.0",
-    "@react-native-firebase/firestore": "^11.3.0",
-    "@react-native-firebase/functions": "^11.3.0",
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-native-firebase/admob": "11.3.0",
+    "@react-native-firebase/analytics": "11.3.0",
+    "@react-native-firebase/app": "11.3.0",
+    "@react-native-firebase/firestore": "11.3.0",
+    "@react-native-firebase/functions": "11.3.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
