--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,10 @@
 
 buildscript {
     ext {
+// @generated begin expo-gradle-ext-vars - expo prebuild (DO NOT MODIFY) sync-a14167d3df9d6380c3d77a8f8070215ea8a94013
+	googlePlayServicesLocationVersion = "21.1.0"
+	appCompatVersion = "1.4.2"
+// @generated end expo-gradle-ext-vars
         buildToolsVersion = findProperty('android.buildToolsVersion') ?: '34.0.0'
         minSdkVersion = Integer.parseInt(findProperty('android.minSdkVersion') ?: '23')
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '34')
@@ -25,7 +29,14 @@ apply plugin: "com.facebook.react.rootproject"
 
 allprojects {
     repositories {
+// @generated begin react-native-background-fetch-maven - expo prebuild (DO NOT MODIFY) sync-b86324ce2eb77b03cc8b69ba206ef8275cd006ff
+	maven { url "${project(":react-native-background-fetch").projectDir}/libs" }
+// @generated end react-native-background-fetch-maven
         maven {
+// @generated begin react-native-background-geolocation-maven - expo prebuild (DO NOT MODIFY) sync-4b2bae87fd8579c445d8885f6bdc8542d9d0bbca
+	maven { url "${project(":react-native-background-geolocation").projectDir}/libs" }
+	maven { url 'https://developer.huawei.com/repo/' }
+// @generated end react-native-background-geolocation-maven
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url(new File(['node', '--print', "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), '../android'))
         }
