--- a/ios/roadtripbite.xcodeproj/xcshareddata/xcschemes/roadtripbite.xcscheme
+++ b/ios/roadtripbite.xcodeproj/xcshareddata/xcschemes/roadtripbite.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "roadtripbite.app"
-               BlueprintName = "roadtripbite"
-               ReferencedContainer = "container:roadtripbite.xcodeproj">
+               BuildableName = "RoadTripBite.app"
+               BlueprintName = "RoadTripBite"
+               ReferencedContainer = "container:RoadTripBite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "roadtripbiteTests.xctest"
-               BlueprintName = "roadtripbiteTests"
-               ReferencedContainer = "container:roadtripbite.xcodeproj">
+               BuildableName = "RoadTripBiteTests.xctest"
+               BlueprintName = "RoadTripBiteTests"
+               ReferencedContainer = "container:RoadTripBite.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "roadtripbite.app"
-            BlueprintName = "roadtripbite"
-            ReferencedContainer = "container:roadtripbite.xcodeproj">
+            BuildableName = "RoadTripBite.app"
+            BlueprintName = "RoadTripBite"
+            ReferencedContainer = "container:RoadTripBite.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "roadtripbite.app"
-            BlueprintName = "roadtripbite"
-            ReferencedContainer = "container:roadtripbite.xcodeproj">
+            BuildableName = "RoadTripBite.app"
+            BlueprintName = "RoadTripBite"
+            ReferencedContainer = "container:RoadTripBite.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
