--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.4.1'
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
@@ -31,12 +32,12 @@ allprojects {
     repositories {
 // @generated begin react-native-background-fetch-maven - expo prebuild (DO NOT MODIFY) sync-b86324ce2eb77b03cc8b69ba206ef8275cd006ff
 	maven { url "${project(":react-native-background-fetch").projectDir}/libs" }
-// @generated end react-native-background-fetch-maven
-        maven {
 // @generated begin react-native-background-geolocation-maven - expo prebuild (DO NOT MODIFY) sync-4b2bae87fd8579c445d8885f6bdc8542d9d0bbca
 	maven { url "${project(":react-native-background-geolocation").projectDir}/libs" }
 	maven { url 'https://developer.huawei.com/repo/' }
 // @generated end react-native-background-geolocation-maven
+// @generated end react-native-background-fetch-maven
+        maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url(new File(['node', '--print', "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), '../android'))
         }
