--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
+    "expo": "~51.0.35",
     "expo-build-properties": "^0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -38,7 +38,9 @@
     "react-native-background-geolocation": "^4.17.1",
     "react-native-compass-heading": "^1.5.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-mobile-ads": "^14.2.3",
     "react-native-maps": "1.14.0",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
