--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.evda.RoadTripBite",
       "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
