--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web",
     "test": "jest --watchAll",
-    "prebuild": "expo prebuild",
+    "prebuild": "npx expo prebuild",
     "build:ios:local": "eas build --platform ios --local --output ./dist/prod/road-trip-bite.ipa",
     "submit": "eas submit",
-    "lint": "expo lint"
+    "lint": "npx expo lint"
   },
   "jest": {
     "preset": "jest-expo"
