--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "road-trip-bite",
     "version": "3.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.jpeg",
+    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
