--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^21.3.0",
+    "@react-native-firebase/auth": "^21.3.0",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.3.0",
-    "expo": "~51.0.35",
+    "expo": "~51.0.38",
     "expo-build-properties": "^0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
