--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,18 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>379472462063-ic8uclfduimpeq0laovhnfqvrkv10kl5.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.379472462063-ic8uclfduimpeq0laovhnfqvrkv10kl5</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBNg3lPuCx4zaq-a1Wyf0zsJhjPMaUPRvY</string>
+	<string>AIzaSyD6gCPe921vcxbB5b0Ltz3upgR5k8w25h0</string>
 	<key>GCM_SENDER_ID</key>
 	<string>379472462063</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.evda.road-trip-bite</string>
+	<string>com.evda.roadtripbite</string>
 	<key>PROJECT_ID</key>
 	<string>road-trip-bite</string>
 	<key>STORAGE_BUCKET</key>
-	<string>road-trip-bite.appspot.com</string>
+	<string>road-trip-bite.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:379472462063:ios:4005dbbfd2ef3883901b1a</string>
+	<string>1:379472462063:ios:9f6390b5f4e026ea901b1a</string>
 </dict>
 </plist>
