--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-native-google-mobile-ads": "^14.2.3",
     "react-native-maps": "1.14.0",
     "react-native-permissions": "^4.1.5",
+    "react-native-purchases": "^8.2.5",
+    "react-native-purchases-ui": "^8.2.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -55,6 +57,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "expo-dev-client": "~4.0.28",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
