--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "@react-native-firebase/auth": "^21.3.0",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.3.0",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
     "expo-build-properties": "^0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-gradle-ext-vars": "^0.1.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "~3.5.24",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -44,6 +44,8 @@
     "react-native-google-mobile-ads": "^14.2.3",
     "react-native-maps": "1.14.0",
     "react-native-permissions": "^4.1.5",
+    "react-native-purchases": "^8.2.5",
+    "react-native-purchases-ui": "^8.2.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -55,6 +57,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "expo-dev-client": "~4.0.29",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
