--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-firebase/app": "^21.3.0",
     "@react-native-firebase/auth": "^21.3.0",
+    "@react-native-firebase/functions": "^21.3.0",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.3.0",
     "expo": "~51.0.39",
