--- a/package.json
+++ b/package.json
@@ -18,52 +18,52 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.5",
-    "@react-native-firebase/app": "^21.3.0",
-    "@react-native-firebase/auth": "^21.3.0",
-    "@react-native-firebase/functions": "^21.3.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-firebase/app": "^21.4.1",
+    "@react-native-firebase/auth": "^21.4.1",
+    "@react-native-firebase/functions": "^21.4.1",
+    "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
-    "expo": "~51.0.39",
-    "expo-build-properties": "^0.12.5",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo": "~52.0.7",
+    "expo-build-properties": "^0.13.1",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
     "expo-gradle-ext-vars": "^0.1.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.24",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-web-browser": "~14.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-background-fetch": "^4.2.5",
-    "react-native-background-geolocation": "^4.17.1",
-    "react-native-compass-heading": "^1.5.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-google-mobile-ads": "^14.2.3",
-    "react-native-maps": "1.14.0",
-    "react-native-permissions": "^4.1.5",
-    "react-native-purchases": "^8.2.5",
-    "react-native-purchases-ui": "^8.2.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react-native-background-geolocation": "^4.17.6",
+    "react-native-compass-heading": "^2.0.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-mobile-ads": "^14.4.0",
+    "react-native-maps": "1.18.0",
+    "react-native-permissions": "^5.1.0",
+    "react-native-purchases": "^8.2.7",
+    "react-native-purchases-ui": "^8.2.7",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "expo-dev-client": "~4.0.29",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.26.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~18.3.12",
+    "@types/react-test-renderer": "^18.3.0",
+    "expo-dev-client": "~5.0.2",
+    "jest": "^29.7.0",
+    "jest-expo": "~52.0.2",
+    "react-test-renderer": "18.3.1",
+    "typescript": "~5.6.3"
   },
   "private": true,
   "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
