--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-native-purchases-ui": "^8.2.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "^4.0.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2"
   },
